@@ -7,7 +7,7 @@ license = Perl_5
 copyright_holder = Tim Bunce
 copyright_year   = 1994
 
-version = 1.48
+version = 1.50
 
 [Authority]
 authority=cpan:PYTHIAN
